--- a/views/index.html
+++ b/views/index.html
@@ -33,32 +33,15 @@
         </div>
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Favorites</a></li>
+          <li><a href="#" id='favorites'>Favorites</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
 
-  <div id='result'>
+  <div id='result' class='col-xs-12'>
   </div>
 
-  <nav aria-label="Page navigation">
-    <ul class="pagination">
-      <li>
-        <a href="#" aria-label="Previous">
-          <span aria-hidden="true">&laquo;</span>
-        </a>
-      </li>
-      <li><a href="#">1</a></li>
-      <li><a href="#">2</a></li>
-      <li><a href="#">3</a></li>
-      <li><a href="#">4</a></li>
-      <li><a href="#">5</a></li>
-      <li>
-        <a href="#" aria-label="Next">
-          <span aria-hidden="true">&raquo;</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
+  <div id='pagination' class='text-center'>
+  </div>
 </body>
